# fourdst

./: .gitignore  cli.md  meson.build  meson_options.txt  pip_install_mac_patch.sh  pyproject.toml  readme.md
build-config/: meson.build
build-config/libcomposition/: meson.build
build-config/libconfig/: meson.build
build-config/libconstants/: meson.build
build-config/liblogging/: meson.build
build-config/libplugin/: meson.build
build-config/pybind/: meson.build
build-python/: fix_rpaths.py  import_debug.sh  meson.build
electron/: PACKAGING_SOLUTION_SUMMARY.md  PKG_INSTALLER_GUIDE.md  bridge.py  build-backend.js  check-runtime-deps.js  debug-packaged-app.js  docs.json  entitlements.mac.plist  fourdst-backend.spec  generate-icons.js  index.html  main-refactored.js  main.js  package-lock.json  package.json  refresh-macos-icons.js  renderer-refactored.js  renderer.js  styles.css  test-file-associations.js  validate-dependencies.js
electron/icons/: app-icon.icns  fbundle-icon.icns  opat-icon.icns
electron/installer-resources/: conclusion.html  welcome.html
electron/installer-scripts/: postinstall
electron/main/: app-lifecycle.js  backend-bridge.js  file-dialogs.js  ipc-handlers.js
electron/renderer/: bundle-operations.js  docs-handler.js  dom-manager.js  event-handlers.js  fill-workflow.js  key-operations.js  opat-handler.js  opat-plotting.js  plugin-operations.js  state-manager.js  ui-components.js
electron/~/Desktop/: test.pem  test.pub  test.pub.pem
fourdst/cli/: main.py
fourdst/cli/bundle/: clear.py  create.py  diff.py  fill.py  inspect.py  sign.py  validate.py
fourdst/cli/cache/: clear.py
fourdst/cli/common/: config.py  utils.py
fourdst/cli/keys/: add.py  generate.py  list.py  remove.py  sync.py
fourdst/cli/keys/remote/: __init__.py  add.py  list.py  remove.py
fourdst/cli/plugin/: diff.py  extract.py  init.py  pack.py  validate.py
fourdst/cli/templates/: meson.build.in  plugin.cpp.in
fourdst/core/: build.py  bundle.py  keys.py  platform.py  plugin.py  utils.py
src-pybind/: bindings.cpp  meson.build
src-pybind/composition/: bindings.cpp  bindings.h  meson.build
src-pybind/config/: bindings.cpp  bindings.h  meson.build
src-pybind/constants/: bindings.cpp  bindings.h  meson.build
src-pybind/fourdst/: __init__.py  __init__.pyi
src-pybind/fourdst/_phys/: __init__.pyi  atomic.pyi  config.pyi  constants.pyi  exceptions.pyi
src-pybind/fourdst/_phys/composition/: __init__.pyi  utils.pyi
src-pybind/fourdst/cli/bundle/: clear.py  inspect.py
src-pybind/fourdst/cli/common/: config.py  templates.py  utils.py
src-pybind/fourdst/cli/keys/: add.py  generate.py  list.py  remove.py
src-pybind/fourdst/cli/keys/remote/: add.py  remove.py
src-pybind/fourdst/cli/plugin/: init.py  pack.py
src-pybind/fourdst/core/: build.py  bundle.py  config.py  platform.py
subprojects/: libcomposition.wrap  libconfig.wrap  libconstants.wrap  liblogging.wrap  libplugin.wrap
utils/wheels/: build-wheels-linux_aarch64.sh  build-wheels-linux_x86_64.sh  build-wheels-macos_aarch64.sh  installPyEnvVersions.sh  readme.md
