option('pkg-config', type: 'boolean', value: false, description: 'generate pkg-config file for all libraries and fourdst (defaults to false to allow easy pip building)')
option('electron-build-py-backend', type: 'boolean', value: false, description: 'use pyinstaller to build the python backend for the electron app')
option('build-tests', type: 'boolean', value: false, description: 'compile subproject tests')
option('build-lib-all', type: 'boolean', value: true, description: 'build the full fourdst library with all features enabled')
option('build-lib-comp', type: 'boolean', value: false, description: 'build the minimal fourdst library with only compression and decompression features enabled')
option('build-lib-config', type: 'boolean', value: false, description: 'build the fourdst library configuration tool only')
option('build-lib-const', type: 'boolean', value: false, description: 'build the fourdst library constants only')
option('build-python', type: 'boolean', value: true, description: 'build the python bindings so you can use fourdst from python. This will also build libcomposition, libconfig, and libconstants')
option('build-lib-log', type: 'boolean', value: false, description: 'build the fourdst library logging features only')
option('build-lib-plugin', type: 'boolean', value: false, description: 'build the fourdst plugin module only')
