[build-system]
requires = [
    "meson-python>=0.15.0", # Use a recent version
    "meson>=1.6.0",        # Specify your Meson version requirement
    "pybind11>=2.10"       # pybind11 headers needed at build time
]
build-backend = "mesonpy"

[project]
name = "fourdst"  # Choose your Python package name
version = "v0.9.11" # Your project's version
description = "Python interface to the utility fourdst modules from the 4D-STAR project"
readme = "readme.md"
license = { file = "LICENSE.txt" } # Reference your license file [cite: 2]

authors = [
    {name = "Emily M. Boudreaux", email = "emily@boudreauxmail.com"},
]
maintainers = [
    {name = "Emily M. Boudreaux", email = "emily@boudreauxmail.com"}
]

dependencies = [
    "typer",
    "libclang",
    "questionary",
    "rich",
    "pyyaml",
    "cryptography",
    "pyOpenSSL",
    "pyinstaller"
]

[project.scripts]
fourdst-cli = "fourdst.cli.main:app"

[tool.meson-python.args]
setup = [
    '-Dpkg_config=false',
    '-Dbuild_python=true',
    '-Delectron_build_py_backend=false',
    '-Dbuild_tests=false',
    '-Dbuild_lib_all=false',
    '-Dbuild_lib_comp=true',
    '-Dbuild_lib_config=true',
    '-Dbuild_lib_const=true',
    '-Dbuild_lib_log=true',
    '-Dbuild_lib_plugin=false'
]


