[build-system]
requires = ["meson-python>=0.19,<0.20", "meson>=1.9.1,<1.10", "pybind11>=2.10"]
build-backend = "mesonpy"

[project]
name = "fourdst"  # Choose your Python package name
dynamic = ["version"]
description = "Python interface to the utility fourdst modules from the 4D-STAR project"
readme = "readme.md"
license = { file = "LICENSE.txt" } # Reference your license file [cite: 2]

authors = [
    {name = "Emily M. Boudreaux", email = "emily@boudreauxmail.com"},
]
maintainers = [
    {name = "Emily M. Boudreaux", email = "emily@boudreauxmail.com"}
]

dependencies = [
    "typer",
    "libclang",
    "questionary",
    "rich",
    "pyyaml",
    "cryptography",
    "pyOpenSSL",
    "pyinstaller"
]

[project.scripts]
fourdst-cli = "fourdst.cli.main:app"
fourdst-compiler-flags = "fourdst:get_compiler_flags_formatted"
fourdst-include-dirs = "fourdst:get_include_dirs"
fourdst-lib-dirs = "fourdst:get_lib_dirs"
fourdst-rpath-flags = "fourdst:get_rpath_flags"
fourdst-version = "fourdst:print_fourdst_version"

[tool.meson-python.args]
setup = [
    '-Dpkg_config=false',
    '-Dbuild_python=true',
    '-Delectron_build_py_backend=false',
    '-Dbuild_tests=false',
    '-Dbuild_lib_all=false',
    '-Dbuild_lib_comp=true',
    '-Dbuild_lib_config=true',
    '-Dbuild_lib_const=true',
    '-Dbuild_lib_log=true',
    '-Dbuild_lib_plugin=false'
]


